--- a/translations/kangyur/translations/061-010_toh190-the_sutra_of_the_prophecy_concerning_strivivarta.xml
+++ b/translations/kangyur/translations/061-010_toh190-the_sutra_of_the_prophecy_concerning_strivivarta.xml
@@ -28,7 +28,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-061-010-449">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.10 <date>2024</date>
+                <edition>v 1.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
 
@@ -172,6 +172,9 @@
                 <change who="#celso" when="2024-04-22T14:55:49.745Z" type="text-version" status="1.0.10" xml:id="UT22084-061-010-484">
                     <desc>Activated pending links</desc>
                 </change>
+                <change who="#celso" when="2024-04-22T15:03:29.637Z" type="text-version" status="1.0.11" xml:id="UT22084-061-010-485">
+                    <desc>corrected typo</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -250,7 +253,7 @@
                             Ling Translation Group, trans., <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh84.html">The
                                 Questions of the Girl Vimalaśraddhā</ref>
-                            </title> (<title xml:lang="Sa-Ltn">Dārikāvimala­śraddhā­paripṛcchā</title>, Toh 84), 2021.</note>
+                            </title> (Toh 84), 2021.</note>
                         <title xml:lang="en">The Questions of Vimaladattā</title> (Toh 77),<ref rend="pending" inst="add note citation, add bibl" target="https://read.84000.co/translation/toh77.html"/> and <title xml:lang="en">The Lion’s Roar of Śrīmālādevī</title>
                         (Toh 92)<ref rend="pending" inst="add note citation, add bibl" target="https://read.84000.co/translation/toh92.html"/> are
                         princesses. Elsewhere, royal women are the protagonists predicted to future awakening in <title xml:lang="en">The Sūtra of
@@ -260,20 +263,20 @@
                                 <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh192.html">The Prophecy of
                                     Kṣemavatī</ref>
-                            </title>, (Kṣemavatī­vyākaraṇa, Toh 192) 2022.</note> Less privileged laywomen
+                            </title>, (Toh 192) 2022.</note> Less privileged laywomen
                         are the main interlocutors in <title xml:lang="en">The Questions of the Girl Sumati</title> (Toh 74),<ref rend="pending" inst="add note citation, add bibl" target="https://read.84000.co/translation/toh74.html"/>
-                        <title xml:lang="en">The Questions of Gaṅgottara</title> (Gaṅgottara­pari­pṛcchā, Toh 75),<note place="end" xml:id="UT22084-061-010-482">See 84000 Translation Team, trans., <title xml:lang="en">
+                        <title xml:lang="en">The Questions of Gaṅgottara</title> (Toh 75),<note place="end" xml:id="UT22084-061-010-482">See 84000 Translation Team, trans., <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh75.html">The Questions of Gaṅgottarā</ref>
                         </title> (Toh 75), 2024.</note>
                         <title xml:lang="en">The Questions of an Old Lady</title> (Toh 171),<note place="end" xml:id="UT22084-061-010-420">See Sakya
                             Pandita Translation Group (International Buddhist Academy Division), trans., <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh171.html">The Questions of an Old Lady</ref>
-                            </title> (Mahallikā­paripṛcchā, Toh 171),
+                            </title> (Toh 171),
                             2011.</note>
                         <title xml:lang="en">The Miraculous Play of Mañjuśrī</title> (Toh 96),<note place="end" xml:id="UT22084-061-010-421">See Jens
                             Erland Braarvig, trans., <title xml:lang="en">
                                 <ref target="https://read.84000.co/translation/toh96.html">The Miraculous Play of Mañjuśrī</ref>
-                            </title> (Mañjuśrī­vikrīḍita, Toh 96), 2020.</note> and <title xml:lang="en">The Sūtra of the Girl Candrottarā’s Prophecy</title> (Toh
+                            </title> (Toh 96), 2020.</note> and <title xml:lang="en">The Sūtra of the Girl Candrottarā’s Prophecy</title> (Toh
                             191).<ref rend="pending" inst="add note citation, add bibl" target="https://read.84000.co/translation/toh191.html"/> Even
                         so, given the longstanding Buddhist tradition of according primacy to males, the focus on Strīvivarta in this scripture is
                         unusual and refreshing. Still, in the end Strīvivarta bows down at the Buddha’s feet, saying that she will not rise again
