--- a/translations/kangyur/translations/058-005_toh156-the_questions_of_the_naga_king_anavatapta.xml
+++ b/translations/kangyur/translations/058-005_toh156-the_questions_of_the_naga_king_anavatapta.xml
@@ -31,7 +31,7 @@
                 <sponsor xml:id="UT22084-058-005-7">Tian Pujun</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -158,6 +158,9 @@
                 <change who="#john" when="2024-04-23T20:15:23.12Z" type="text-version" status="0.0.6" xml:id="UT22084-058-005-1633">
                     <desc>Edits to summary, intro, two notes, and two biblio entries.</desc>
                 </change>
+                <change who="#john" when="2024-04-23T20:18:54.062Z" type="text-version" status="0.0.7" xml:id="UT22084-058-005-1634">
+                    <desc>Typo corrected</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -175,7 +178,7 @@
                     including the perfections, mindfulness, and meditation, with a strong
                     orientation toward emptiness as the inexpressible ultimate nature. As the Buddha
                     is teaching at Vulture Peak Mountain near Rājagṛha, a nāga king named Anavatapta
-                    approaches questions him on these topics and receives instruction on them. 
+                    approaches, questions him on these topics, and receives instruction on them. 
                     He then invites the Buddha to his home at <term>Anavatapta</term>, the legendary
                     lake from which the four rivers of Jambudvīpa flow. After flying there with an
                     enormous entourage, the Buddha resumes his teachings. The assembly is joined by
