--- a/translations/kangyur/translations/061-004_toh184-the_sutra_teaching_the_conduct_of_a_bodhisattva.xml
+++ b/translations/kangyur/translations/061-004_toh184-the_sutra_teaching_the_conduct_of_a_bodhisattva.xml
@@ -27,7 +27,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-061-004-302">David Higgins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.15 <date>2023</date>
+                <edition>v 1.1.17 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -181,6 +181,12 @@
                 </change>
                 <change who="#martina-cotter" when="2023-10-20T14:24:22.998Z" type="text-version" status="1.1.15" xml:id="UT22084-061-004-347">
                     <desc>Added pending links.</desc>
+                </change>
+                <change who="#celso" when="2024-02-27T22:24:16.173Z" type="text-version" status="1.1.16" xml:id="UT22084-061-004-348">
+                    <desc>updated Kangyur sigla to match rKTS</desc>
+                </change>
+                <change who="#celso" when="2024-04-24T13:18:49.098Z" type="text-version" status="1.1.17" xml:id="UT22084-061-004-350">
+                    <desc>Activated pending links</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -492,7 +498,7 @@
                         <l>Its radiance is far brighter than a lattice</l>
                         <l>Of pure crystal lunar rays.<note place="end" xml:id="UT22084-061-004-42"> The
                                 translation follows the reading <foreign xml:lang="Bo-Ltn" type="term">’od ni shel dag
-                                    zla ba yi</foreign> found in K<hi rend="subscript">Y</hi>, J, K, N, C, H, and S. D
+                                    zla ba yi</foreign> found in Y<!--KY-->, J, K, N, C, H, and S. D
                                 and T read <foreign xml:lang="Bo-Ltn" type="term">’od ni shel dang zla ba
                                 yi</foreign>.</note>
                         </l>
@@ -735,7 +741,7 @@
                         <l>And grasp at the state of a worthy one, </l>
                         <l>But aren’t consciousness and<note place="end" xml:id="UT22084-061-004-79"> This
                                 translation follows the variant <foreign xml:lang="Bo-Ltn" type="quote">’di
-                                    dang</foreign> reported in K<hi rend="subscript">Y</hi>, J, K, N, H, and S. D reads
+                                    dang</foreign> reported in Y<!--KY-->, J, K, N, H, and S. D reads
                                     <foreign xml:lang="Bo-Ltn" type="quote">’di dag</foreign>.</note> its domain </l>
                         <l>Simply empty?</l>
                     </lg>
@@ -944,7 +950,7 @@
                     <milestone unit="chunk" xml:id="UT22084-061-004-121"/>
                     <p tid="114">“Since you equate complete maturation with accomplishing the four 
                         factors,<note place="end" xml:id="UT22084-061-004-122">Five other Mahāyāna sūtras 
-                            (<ref rend="pending" target="https://read.84000.co/translation/toh248.html">Toh 248</ref>; 
+                            (<ref target="https://read.84000.co/translation/toh248.html">Toh 248</ref>; 
                         <ref target="https://read.84000.co/translation/toh249.html">Toh 249</ref>; 
                             <ref target="https://read.84000.co/translation/toh250.html">Toh 250</ref>; 
                             <ref target="https://read.84000.co/translation/toh251.html">Toh 251</ref>; 
@@ -1212,8 +1218,7 @@
                         <expan>Degé</expan>
                     </item>
                     <item xml:id="UT22084-061-004-162">
-                        <abbr>K<hi rend="subscript">Y</hi>
-                            </abbr>
+                        <abbr>Y<!--KY--></abbr>
                         <expan>Yongle</expan>
                     </item>
                     <item xml:id="UT22084-061-004-163">
@@ -1258,8 +1263,7 @@
                     <bibl xml:id="UT22084-061-004-171">
                         <title xml:lang="Bo-Ltn">byang chub sems dpa’i so sor thar pa
                             chos bzhi sgrub pa zhes bya ba’i theg pa chen po’i mdo</title> (<title xml:lang="Sa-Ltn">Bodhisattva­pratimokṣa­catuṣkanirhāra­nāma­mahāyāna­sūtra</title>). Toh 248, Degé Kangyur
-                        vol. 66 (mdo sde, za), folios 46.b–59.a.<ref rend="pending" target="https://read.84000.co/translation/toh248.html"/>
-                    </bibl>
+                        vol. 66 (mdo sde, za), folios 46.b–59.a. English translation in <ref target="https://read.84000.co/translation/toh248.html">Dharmachakra Translation Committee 2024</ref>.</bibl>
                     <bibl xml:id="UT22084-061-004-172">
                         <title xml:lang="Bo-Ltn">chos bzhi pa’i mdo</title> (<title xml:lang="Sa-Ltn">Caturdharmaka­sūtra</title>). Toh 250, Degé Kangyur vol. 66 (mdo sde, za),
                         folios 59.b–60.a. English translation in 
@@ -1310,7 +1314,7 @@
                     <bibl xml:id="UT22084-061-004-182">Negi, J.S. <title xml:lang="en">Tibetan-Sanskrit
                             Dictionary</title> (<title xml:lang="Bo-Ltn">bod skad dang legs sbyar gyi tshig mdzod chen
                             mo</title>). 16 vols. Sarnath: Central Institute of higher Tibetan Studies, 1993. </bibl>
-                    <bibl xml:id="UT22084-061-004-344">Pearcey, Adam. trans. 
+                    <bibl xml:id="UT22084-061-004-344">Pearcey, Adam. trans. (2023).
                         <title xml:lang="en">
                             <ref target="https://read.84000.co/translation/toh250.html">The Four Factors</ref>
                         </title> 
@@ -1326,9 +1330,12 @@
                     <bibl xml:id="UT22084-061-004-183">Braarvig, Jens. “The Practice of the Bodhisattvas: Negative
                         Dialectics and Provocative Arguments: Edition of the Tibetan text of the <title xml:lang="Sa-Ltn">Bodhisattva­caryānirdeśa</title> with a translation and introduction.”
                             <title xml:lang="la">Acta Orientalia</title> 55 (1994): 113–60.</bibl>
-                    <bibl xml:id="UT22084-061-004-291">Dharmachakra Translation Committee, trans. <title xml:lang="en">
+                    <bibl xml:id="UT22084-061-004-291">Dharmachakra Translation Committee, trans. (2020) <title xml:lang="en">
                         <ref target="https://read.84000.co/translation/toh252.html">The Fourfold Accomplishment</ref>
                     </title> (<title xml:lang="Sa-Ltn">Catuṣkanirhāra</title>, Toh 252). 84000: Translating the Words of the Buddha, 2020.</bibl>
+                    <bibl xml:id="UT22084-061-004-349">———, trans. (2024). <title xml:lang="en">
+                            <ref target="https://read.84000.co/translation/toh248.html">The Accomplishment of the Sets of Four Qualities: The Bodhisattvas’ Prātimokṣa</ref>
+                        </title> (<title xml:lang="Sa-Ltn">Bodhisattva­prātimokṣa­catuṣkanirhāra</title>, Toh 248). 84000: Translating the Words of the Buddha, 2024.</bibl>
                     <bibl xml:id="UT22084-061-004-186">
                         <title xml:lang="en">dkar chag ’phang thang ma</title>. Beijing:
                         mi rigs dpe skrun khang, 2003.</bibl>
@@ -1519,7 +1526,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">dhāraṇī</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">gzungs</term>
                             <term xml:lang="bo" type="attestedSource" n="1">གཟུངས།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>A power that bodhisattvas gain that allows them to perfectly retain
                                 the words and meaning of all that they have learned. </p>
                             </note>
@@ -1543,7 +1550,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">pratyekabuddha</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">rang sangs rgyas</term>
                             <term xml:lang="bo" type="attestedSource" n="1">རང་སངས་རྒྱས།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>Someone who obtains personal liberation through very little or no
                                 instruction from others.</p>
                             </note>
@@ -1614,7 +1621,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">dharma­tā</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">chos nyid</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ཆོས་ཉིད།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The intrinsic or real nature of phenomena.</p>
                             </note>
                         </gloss>
@@ -1885,7 +1892,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">śākyamuni</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">shAkya thub pa</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ཤཱཀྱ་ཐུབ་པ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The name of the historical Buddha, Siddhārtha Gautama; he was a <foreign xml:lang="Sa-Ltn">muni</foreign> (sage) from the Śākya clan.</p>
                             </note>
                         </gloss>
@@ -2212,7 +2219,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">tuṣita</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">dga’ ldan</term>
                             <term xml:lang="bo" type="attestedSource" n="1">དགའ་ལྡན།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The third of the six heavens of the desire realm.</p>
                             </note>
                         </gloss>
