--- a/translations/kangyur/translations/034-009_toh21,531-the_heart_of_the_perfection_of_wisdom_the_blessed_mother.xml
+++ b/translations/kangyur/translations/034-009_toh21,531-the_heart_of_the_perfection_of_wisdom_the_blessed_mother.xml
@@ -28,7 +28,7 @@
         <editor role="finalReviewer" xml:id="UT22084-034-009-173">Ryan Damron</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.13 <date>2024</date>
+                <edition>v 1.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -215,6 +215,9 @@
                 <change who="#celso" when="2024-04-22T11:53:08.401Z" type="text-version" status="1.0.13" xml:id="UT22084-034-009-224">
                     <desc>activated links to Toh 8</desc>
                 </change>
+                <change who="#celso" when="2024-04-24T14:59:35.381Z" type="text-version" status="1.0.14" xml:id="UT22084-034-009-225">
+                    <desc>fixed a few typos in markup</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
   </teiHeader>
@@ -297,8 +300,7 @@
             <milestone unit="chunk" xml:id="UT22084-034-009-13"/>
             <p tid="14">The short version of <title xml:lang="en">The Heart Sūtra </title>was first
               compiled—most likely as an abstract of longer Prajñāpāramitā sūtras—in China sometime
-              in the middle of the seventh century <hi rend="small-caps">ce.</hi>
-                            <note place="end" xml:id="UT22084-034-009-14">
+              in the middle of the seventh century <hi rend="small-caps">ce</hi>.<note place="end" xml:id="UT22084-034-009-14">
                 <title xml:lang="en">The Heart Sūtra</title>’s Chinese origins were first pointed
                 out in English by Jan Nattier (1992), who argued that the short version of <title xml:lang="en">The Heart Sūtra</title> was originally compiled in China rather than
                 India. Nattier further suggested that <title xml:lang="en">The Heart Sūtra</title>
@@ -326,7 +328,7 @@
                   <ref target="http://jayarava.blogspot.com">http://jayarava.blogspot.com</ref>.</note> Shortly thereafter, it appears that the
               sūtra was translated from Chinese into Sanskrit. The material used to compile the
               sūtra was extracted from key passages in Prajñāpāramitā scriptures in Chinese
-              translation, especially Kumārajīva’s (344–413 <hi rend="small-caps">ce)</hi>
+              translation, especially Kumārajīva’s (344–413 <hi rend="small-caps">ce</hi>)
               translation of <title xml:lang="en">The Perfection of Wisdom in Twenty-Five Thousand
                 Lines</title> (Taishō 223). These central statements were then framed by an
               introduction describing the bodhisattva Avalokiteśvara’s role as the teacher, and then
@@ -442,8 +444,7 @@
               earliest witness we have of a Sanskrit text is not an actual Sanskrit manuscript, but
               rather a version with the Sanskrit transliterated into Chinese characters (Taishō
               256). This text was likely produced by the famous translator and teacher Amoghavajra
-              (705–74) and can therefore be dated to the eighth century<hi rend="small-caps">.</hi>
-                            <note place="end" xml:id="UT22084-034-009-24"> Silk 2021, p. 103.</note>
+              (705–74) and can therefore be dated to the eighth century.<note place="end" xml:id="UT22084-034-009-24"> Silk 2021, p. 103.</note>
               While multiple Sanskrit manuscripts of the shorter version of <title xml:lang="en">The
                 Heart Sūtra</title> exist, any dating of such manuscripts is typically fraught with
               much uncertainty.<note place="end" xml:id="UT22084-034-009-25"> On the Sanskrit
@@ -476,7 +477,7 @@
               stone stele), and that the Sanskrit translation was produced soon thereafter.<note place="end" xml:id="UT22084-034-009-29"> Attwood 2019, pp. 25–26.</note> However, in
               addition to these mutually distant historical markers, we also have data that place
               the likely time of compilation much more precisely within just a two-year period from
-              654–56 <hi rend="small-caps">ce. </hi>First, 654 <hi rend="small-caps">ce</hi> marks
+              654–56 <hi rend="small-caps">ce</hi>. First, 654 <hi rend="small-caps">ce</hi> marks
               the year when the <title xml:lang="Sa-Ltn">Dhāraṇī­samuccaya</title> (Taishō 901),
               which is the likely source of the mantra in <title xml:lang="en">The Heart
                 Sūtra</title>, was translated into Chinese.<note place="end" xml:id="UT22084-034-009-30"> See <ptr target="#UT22084-034-009-15"/><!--note 5-->.</note> Second, in Xuanzang’s biography (Taishō 2053, written in the
