--- a/translations/kangyur/translations/066-008_toh250-the_sutra_on_four_points.xml
+++ b/translations/kangyur/translations/066-008_toh250-the_sutra_on_four_points.xml
@@ -25,7 +25,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-066-008-161">John Canti</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.5 <date>2024</date>
+                <edition>v 1.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -195,6 +195,9 @@
                 <change who="#andre" when="2024-01-23T09:49:28.281Z" type="text-version" status="1.0.5" xml:id="UT22084-066-008-167">
                     <desc>Applied a fix to a glossary entry's category</desc>
                 </change>
+                <change who="#celso" when="2024-04-24T17:50:15.948Z" type="text-version" status="1.0.6" xml:id="UT22084-066-008-170">
+                    <desc>Activated pending links</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
         </teiHeader>
@@ -252,7 +255,10 @@
                                                 factors of the path that bodhisattvas must not
                                                 abandon under any circumstance. Two further works, <title xml:lang="en">The Accomplishment of the Sets of Four Qualities:
                                                   The Bodhisattvas’ Prātimokṣa</title> (Toh
-                                                248)<ref rend="pending" target="http://read.84000.co/translation/toh248.html"/> and <title xml:lang="en">The Fourfold Accomplishment</title>
+                                                248)<note place="end" xml:id="UT22084-066-008-168">Dharmachakra 
+                                                        Translation Committee, trans., <title xml:lang="en">
+                                <ref target="https://read.84000.co/translation/toh248.html">The Accomplishment of the Sets of Four Qualities: The Bodhisattvas’ Prātimokṣa</ref>
+                            </title>, Toh 248 (84000: Translating the Words of the Buddha, 2024).</note> and <title xml:lang="en">The Fourfold Accomplishment</title>
                                                 (Toh 252)<note place="end" xml:id="UT22084-066-008-62">Dharmachakra Translation Committee, trans., <title xml:lang="en">
                                 <ref target="http://read.84000.co/translation/toh252.html">The Fourfold Accomplishment</ref>
                             </title>, Toh 252 (84000: Translating the Words of the Buddha,
@@ -493,13 +499,18 @@
                                                 Autonomous Region 7/1. Beijing: China Tibetology
                                                 Publishing House; Vienna: Austrian Academy of
                                                 Sciences Press, 2010.</bibl>
-                                        <bibl xml:id="UT22084-066-008-63">Dharmachakra Translation Committee, trans. 
+                                        <bibl xml:id="UT22084-066-008-63">Dharmachakra Translation Committee, trans. (2020).
                                                 <title xml:lang="en">
                             <ref target="https://read.84000.co/translation/toh252.html">The Fourfold Accomplishment</ref>
                         </title> 
                                                 (<title xml:lang="Sa-Ltn">Catuṣkanirhāra</title>, Toh
                                                 252). 84000: Translating the Words of the Buddha,
                                                 2020.</bibl>
+                                        <bibl xml:id="UT22084-066-008-169">———, 
+                                                trans. (2024). <title xml:lang="en">
+                            <ref target="https://read.84000.co/translation/toh248.html">The Accomplishment of the Sets of Four Qualities: The Bodhisattvas’ Prātimokṣa</ref>
+                        </title> (<title xml:lang="Sa-Ltn">Bodhisattva­prātimokṣa­catuṣkanirhāra</title>, Toh 248). 84000: Translating the Words of the Buddha, 2024.</bibl>
+                                        
                                         <bibl xml:id="UT22084-066-008-48">Feer, Henri Léon. “Le
                                                 Sūtra des Quatre Préceptes.” <title xml:lang="fr">Journal
                                                   Asiatique</title>, sér. 6, tome 8 (1866):
