--- a/translations/kangyur/translations/066-009_toh251-the_sutra_on_four_precepts.xml
+++ b/translations/kangyur/translations/066-009_toh251-the_sutra_on_four_precepts.xml
@@ -23,7 +23,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-066-009-274">John Canti</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.5 <date>2023</date>
+                <edition>v 1.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -193,6 +193,9 @@
                 <change who="#martina-cotter" when="2023-10-20T14:22:31.012Z" type="text-version" status="1.0.5" xml:id="UT22084-066-009-280">
                     <desc>Added pending links.</desc>
                 </change>
+                <change who="#celso" when="2024-04-24T17:51:38.461Z" type="text-version" status="1.0.6" xml:id="UT22084-066-009-283">
+                    <desc>Activated pending links</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
         </teiHeader>
@@ -255,7 +258,10 @@ sūtra</title>) is
                                                 beliefs that a wise son of a good family should not accept as true. Two further works, 
                                                 <title xml:lang="en">The Accomplishment of the Sets of Four Qualities:
                                                         The Bodhisattvas’ Prātimokṣa</title> (Toh
-                                                248)<ref rend="pending" target="http://read.84000.co/translation/toh248.html"/> and 
+                                                248)<note place="end" xml:id="UT22084-066-009-281">Dharmachakra 
+                                                        Translation Committee, trans., <title xml:lang="en">
+                                <ref target="https://read.84000.co/translation/toh248.html">The Accomplishment of the Sets of Four Qualities: The Bodhisattvas’ Prātimokṣa</ref>
+                            </title>, Toh 248 (84000: Translating the Words of the Buddha, 2024).</note> and 
                                                 <title xml:lang="en">The Fourfold Accomplishment</title>
                                                 (Toh 252)<note place="end" xml:id="UT22084-066-009-62">Dharmachakra Translation Committee, trans., 
                                                         <title xml:lang="en">
@@ -585,13 +591,19 @@ sūtra</title>) is
                                                   A Compendium of Buddhist Doctrine Compiled by
                                                   Śāntideva</title>. London: John Murray,
                                                 1922.</bibl>
-                                        <bibl xml:id="UT22084-066-009-78">Dharmachakra Translation Committee, trans. 
+                                        <bibl xml:id="UT22084-066-009-78">Dharmachakra Translation Committee, trans. (2020).
                                                 <title xml:lang="en">
                             <ref target="https://read.84000.co/translation/toh252.html">The Fourfold Accomplishment</ref>
                         </title> 
                                                 (<title xml:lang="Sa-Ltn">Catuṣka­nirhāra</title>, Toh
                                                 252). 84000: Translating the Words of the Buddha,
                                                 2020.</bibl>
+                                        
+                                        <bibl xml:id="UT22084-066-009-282">———, 
+                                                trans. (2024). <title xml:lang="en">
+                            <ref target="https://read.84000.co/translation/toh248.html">The Accomplishment of the Sets of Four Qualities: The Bodhisattvas’ Prātimokṣa</ref>
+                        </title> (<title xml:lang="Sa-Ltn">Bodhisattva­prātimokṣa­catuṣkanirhāra</title>, Toh 248). 84000: Translating the Words of the Buddha, 2024.</bibl>
+                                        
                                         <bibl xml:id="UT22084-066-009-58">Feer, Henri Léon. “Le
                                                 Sūtra des Quatre Préceptes.” <title xml:lang="fr">Journal
                                                   Asiatique</title>, sér. 6, tome 8 (1866):
