--- a/translations/kangyur/translations/058-005_toh156-the_questions_of_the_naga_king_anavatapta.xml
+++ b/translations/kangyur/translations/058-005_toh156-the_questions_of_the_naga_king_anavatapta.xml
@@ -31,7 +31,7 @@
                 <sponsor xml:id="UT22084-058-005-7">Tian Pujun</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 1.0.0 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -39,7 +39,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
                     and to make them available to everyone. </publisher>
-                <availability status="2">
+                <availability status="1.a">
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of a Creative Commons CC
@@ -160,6 +160,12 @@
                 </change>
                 <change who="#john" when="2024-04-23T20:18:54.062Z" type="text-version" status="0.0.7" xml:id="UT22084-058-005-1634">
                     <desc>Typo corrected</desc>
+                </change>
+                <change who="#sameer" when="2024-04-25T04:34:04.089Z" type="translation-status" status="1.a" xml:id="UT22084-058-005-1635">
+                    <desc>1.a</desc>
+                </change>
+                <change who="#sameer" when="2024-04-25T04:34:04.089Z" type="text-version" status="1.0.0" xml:id="UT22084-058-005-1636">
+                    <desc>First published version.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -374,7 +380,7 @@
                     <milestone unit="chunk" xml:id="UT22084-058-005-84"/>
                     <p tid="23">No extant Sanskrit or other Indic versions of <title xml:lang="en">The Questions of the Nāga King Anavatapta</title> have as yet been
                         identified. However, its textual history can be traced back to at least 308
-                            <hi rend="small-caps">ce,</hi> when it was translated into Chinese
+                            <hi rend="small-caps">ce</hi>, when it was translated into Chinese
                         (Taishō 635)<note place="end" xml:id="UT22084-058-005-85">
                             <title xml:lang="Zh-Ltn">Hong dao guang xian san mei jing</title> <title xml:lang="zh">弘道廣顯三昧經</title> (<ref target="https://cbetaonline.dila.edu.tw/en/T0635_001">cbeta</ref>,
                                 <ref target="https://21dzk.l.u-tokyo.ac.jp/SAT2018/T0635.html">sat</ref>).</note> by Dharmarakṣa, among the most prolific of the
