--- a/translations/kangyur/placeholders/100-018_toh862-the_incantation_the_essence_of_the_tathagata_of_medicine.xml
+++ b/translations/kangyur/placeholders/100-018_toh862-the_incantation_the_essence_of_the_tathagata_of_medicine.xml
@@ -13,11 +13,11 @@
                 <editor role="copyEditor" xml:id="UT22084-100-018-22">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2024</date>
+                <edition>v 0.0.12 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-100-018"/>
                 <date/>
             </publicationStmt>
@@ -84,6 +84,12 @@
                 </change>
                 <change who="#sameer" when="2024-04-02T06:38:12.317Z" type="text-version" status="0.0.11" xml:id="UT22084-100-018-26">
                     <desc>Updated vol. 100 page numbers to match the ekangyur</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-25T13:10:32.715Z" type="translation-status" status="2.c" xml:id="UT22084-100-018-27">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-25T13:10:32.715Z" type="text-version" status="0.0.12" xml:id="UT22084-100-018-28">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
