--- a/translations/kangyur/translations/058-005_toh156-the_questions_of_the_naga_king_anavatapta.xml
+++ b/translations/kangyur/translations/058-005_toh156-the_questions_of_the_naga_king_anavatapta.xml
@@ -31,7 +31,7 @@
                 <sponsor xml:id="UT22084-058-005-7">Tian Pujun</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.0 <date>2024</date>
+                <edition>v 1.0.1 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -166,6 +166,9 @@
                 </change>
                 <change who="#sameer" when="2024-04-25T04:34:04.089Z" type="text-version" status="1.0.0" xml:id="UT22084-058-005-1636">
                     <desc>First published version.</desc>
+                </change>
+                <change who="#sameer" when="2024-04-26T06:14:29.868Z" type="text-version" status="1.0.1" xml:id="UT22084-058-005-1637">
+                    <desc>Fixed a typo in the introduction</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -366,7 +369,7 @@
                         </l>
                     </lg>
                     <milestone unit="chunk" xml:id="UT22084-058-005-81"/>
-                    <p tid="21">Additionally, Shapkar Tsokdruk Rangdröl (<foreign xml:lang="Bo-Ltn">shabs dkar tshogs drug rang grol</foreign>) quotes another verse from
+                    <p tid="21">Additionally, Shapkar Tsokdruk Rangdröl (<foreign xml:lang="Bo-Ltn">zhabs dkar tshogs drug rang grol</foreign>) quotes another verse from
                         the sūtra in his defense of nonsectarianism:<note place="end" xml:id="UT22084-058-005-82"> See Shapkar Tsokdruk Rangdröl, p.
                             370.</note>
                     </p>
