--- a/translations/kangyur/translations/090-008_toh564,988-the_marici_dharani.xml
+++ b/translations/kangyur/translations/090-008_toh564,988-the_marici_dharani.xml
@@ -28,7 +28,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-090-008-174">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.2 <date>2024</date>
+                <edition>v 1.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
 
@@ -37,7 +37,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
                     and to make them available to everyone. </publisher>
-                <availability status="1.a">
+                <availability status="1">
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of a Creative Commons CC
@@ -177,6 +177,12 @@
                 </change>
                 <change who="#sameer" when="2024-04-17T05:20:35.327Z" type="text-version" status="1.0.2" xml:id="UT22084-090-008-181">
                     <desc>Updated acknowledgements</desc>
+                </change>
+                <change who="#sameer" when="2024-04-26T06:37:43.001Z" type="translation-status" status="1" xml:id="UT22084-090-008-182">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2024-04-26T06:37:43.001Z" type="text-version" status="1.0.3" xml:id="UT22084-090-008-183">
+                    <desc>Included in App v 3.12</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
