--- a/translations/kangyur/translations/090-009_toh565-the_king_of_ritual_manuals_from_the_tantra_of_maya_maricis_arising.xml
+++ b/translations/kangyur/translations/090-009_toh565-the_king_of_ritual_manuals_from_the_tantra_of_maya_maricis_arising.xml
@@ -24,7 +24,7 @@
         <editor role="finalReviewer" xml:id="UT22084-090-009-378">Rory Lindsay</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.2 <date>2024</date>
+                <edition>v 1.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
 
@@ -33,7 +33,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
           available to everyone. </publisher>
-        <availability status="1.a">
+        <availability status="1">
           <p type="tantricRestriction">
                         <emph rend="bold">Warning:</emph> Readers are reminded that
             according to Vajrayāna Buddhist tradition there are restrictions and commitments
@@ -168,6 +168,12 @@
         </change>
                 <change who="#sameer" when="2024-04-17T05:21:53.917Z" type="text-version" status="1.0.2" xml:id="UT22084-090-009-384">
                     <desc>Updated acknowledgements</desc>
+                </change>
+                <change who="#sameer" when="2024-04-26T06:42:06.956Z" type="translation-status" status="1" xml:id="UT22084-090-009-385">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2024-04-26T06:42:06.956Z" type="text-version" status="1.0.3" xml:id="UT22084-090-009-386">
+                    <desc>Included in App v 3.12</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
