--- a/translations/kangyur/translations/090-010_toh566-the_mandala_rites_of_marici.xml
+++ b/translations/kangyur/translations/090-010_toh566-the_mandala_rites_of_marici.xml
@@ -36,7 +36,7 @@
         <editor role="finalReviewer" xml:id="UT22084-090-010-670">Rory Lindsay</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.4 <date>2024</date>
+                <edition>v 1.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -44,7 +44,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
           available to everyone. </publisher>
-        <availability status="1.a">
+        <availability status="1">
           <p type="tantricRestriction">
                         <emph rend="bold">Warning:</emph> Readers are reminded that
             according to Vajrayāna Buddhist tradition there are restrictions and commitments
@@ -182,6 +182,12 @@
         </change>
                 <change who="#sameer" when="2024-04-17T05:22:47.793Z" type="text-version" status="1.0.4" xml:id="UT22084-090-010-681">
                     <desc>Updated acknowledgements</desc>
+                </change>
+                <change who="#sameer" when="2024-04-26T06:42:49.058Z" type="translation-status" status="1" xml:id="UT22084-090-010-682">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2024-04-26T06:42:49.058Z" type="text-version" status="1.0.5" xml:id="UT22084-090-010-683">
+                    <desc>Included in App v 3.12</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
