--- a/translations/kangyur/placeholders/079-041_toh414-the_unsullied_a_sovereign_tantra.xml
+++ b/translations/kangyur/placeholders/079-041_toh414-the_unsullied_a_sovereign_tantra.xml
@@ -10,8 +10,12 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">rgyud kyi rgyal po rnyog pa med pa zhes bya ba/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Anāvilatantrarājanāma</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.1 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
-                <availability status=""/>
+                <availability status="4"/>
                 <idno xml:id="UT22084-079-041"/>
             </publicationStmt>
             <sourceDesc>
@@ -30,6 +34,12 @@
             
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-079-041-1">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-26T10:15:45.773Z" type="translation-status" status="4" xml:id="UT22084-079-041-2">
+                    <desc>4</desc>
+                </change>
+                <change who="#line-tofte" when="2024-04-26T10:15:45.773Z" type="text-version" status="0.0.1" xml:id="UT22084-079-041-3">
+                    <desc>User set version to 0.0.1</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
